# charon

./: .gitignore  Cargo.toml  README.md  flake.nix  install.sh  justfile  shell.nix
charon-client/: Cargo.toml
charon-client/data/: wisdoms.json
charon-client/data/keymaps/: keychron_10_ansi.json
charon-client/src/: app.rs  cli.rs  config.rs  main.rs  tui.rs
charon-client/src/apps/: editor.rs  mod.rs  password.rs
charon-client/src/apps/charonsay/: ascii_art.rs  charonsay.rs  mod.rs  state.rs  transition.rs  wisdom_category.rs
charon-client/src/apps/keymap/: keyboard_layout.rs  keycode_label.rs  keymap.rs  mod.rs  qmk_keymap.rs
charon-client/src/apps/menu/: menu.rs  menu_item.rs  mod.rs
charon-client/src/apps/stats/: key_heatmap_renderer.rs  line_chart_renderer.rs  mod.rs  stat_data.rs  stat_type.rs  state.rs  stats.rs  stats_period.rs
charon-client/src/components/: centered_area.rs  mod.rs  notification.rs
charon-client/src/domain/: app_event.rs  command.rs  context.rs  mod.rs  tick_action.rs
charon-client/src/domain/traits/: external_app.rs  mod.rs  ui_app.rs
charon-client/src/repository/: mod.rs  wisdom.rs
charon-client/src/repository/metrics/: metrics.rs  mod.rs  query_builder.rs  range_response.rs
charon-client/src/root/: app_manager.rs  mod.rs  pass_through_controller.rs
charon-client/src/util/: dynamic_interval.rs  mod.rs  string.rs
charon-daemon/: Cargo.toml
charon-daemon/data/keymaps/: en_gb.yml
charon-daemon/scripts/: awake.sh  sleep.sh
charon-daemon/src/: error.rs  lib.rs  main.rs
charon-daemon/src/actor/: key_scanner.rs  key_writer.rs  mod.rs  pipeline.rs  power_manager.rs  qmk.rs  telemetry.rs  typist.rs
charon-daemon/src/actor/ipc_bridge/: client_session.rs  client_session_state.rs  ipc_server.rs  mod.rs
charon-daemon/src/actor/telemetry/: metrics_manager.rs  mod.rs  telemetry.rs  telemetry_actor.rs
charon-daemon/src/actor/typing_stats/: mod.rs  typing_stats.rs  typing_stats_actor.rs  wpm_counter.rs
charon-daemon/src/adapter/: event_device_unix.rs  hid_device_unix.rs  keymap_loader_yaml.rs  mod.rs  prometheus_metrics.rs  qmk_async_hid_device.rs
charon-daemon/src/adapter/mock/: event_device_mock.rs  hid_device_mock.rs  metricks_mock.rs  mod.rs
charon-daemon/src/config/: charon_config.rs  defaults.rs  input_config.rs  mod.rs
charon-daemon/src/config/keyboard/: device_entry.rs  keyboard_config.rs  keyboard_group.rs  mod.rs
charon-daemon/src/domain/: actor_state.rs  charon_event.rs  hid_keycode.rs  hid_report.rs  key_shortcut.rs  keyboard_state.rs  keymap.rs  mod.rs  mode.rs  modifiers.rs  topic.rs
charon-daemon/src/domain/qmk/: mod.rs  qmk_event.rs  qmk_record.rs  qmk_request.rs
charon-daemon/src/domain/stats/: current_stats.rs  mod.rs
charon-daemon/src/domain/traits/: mod.rs  processor.rs
charon-daemon/src/port/: event_device.rs  hid_device.rs  keymap_loader.rs  metrics.rs  mod.rs  qmk_device.rs  raw_hid_device.rs
charon-daemon/src/processor/: key_event_processor.rs  mod.rs  system_shortcut_processor.rs
charon-daemon/src/util/: evdev.rs  mod.rs  number.rs  system.rs  time.rs
charon-daemon/tests/: key_events_propagation_test.rs  key_scanner_test.rs
crates/client/: Cargo.toml
crates/client/data/: wisdoms.json
crates/client/data/layouts/: keychron_q10_ansi.txt
crates/client/src/: app.rs  client.rs  config.rs  editor.rs  main.rs  tui.rs
crates/client/src/apps/: editor.rs  mod.rs  password.rs
crates/client/src/apps/charonsay/: ascii_art.rs  charonsay.rs  mod.rs  state.rs  transition.rs
crates/client/src/apps/keymap/: keyboard_layout.rs  keymap.rs  mod.rs
crates/client/src/apps/menu/: menu.rs  mod.rs
crates/client/src/apps/stats/: key_heatmap_renderer.rs  line_chart_renderer.rs  mod.rs  stat_type.rs  state.rs  stats.rs  stats_period.rs
crates/client/src/components/: centered_area.rs  mod.rs  notification.rs
crates/client/src/domain/: app_event.rs  app_msg.rs  app_phase.rs  command.rs  context.rs  mod.rs  pass_through_view.rs
crates/client/src/domain/traits/: external_app.rs  mod.rs  ui_app.rs
crates/client/src/repository/: metrics.rs  mod.rs  wisdom.rs
crates/client/src/repository/metrics/: metrics.rs  query_builder.rs  range_response.rs
crates/client/src/root/: app_manager.rs  mod.rs
crates/client/src/screen/: menu.rs  mod.rs  notification.rs  typing.rs
crates/client/src/util/: mod.rs  string.rs
crates/daemon/: Cargo.toml  keymap.js  package.json
crates/daemon/data/keymaps/: en_uk.yml  en_us.yml  pl.yml  us.yml
crates/daemon/src/: broker.rs  config.rs  daemon.rs  error.rs  main.rs
crates/daemon/src/actor/: key_scanner.rs  key_writer.rs  mod.rs  pipeline.rs  pipeline_actor.rs  power_manager.rs  qmk.rs  telemetry.rs  typing_stats.rs  typist.rs
crates/daemon/src/actor/ipc_server/: client_session.rs  client_session_state.rs  init.rs  ipc_server.rs  mod.rs
crates/daemon/src/actor/key_scanner/: device_resolver.rs  filter.rs  init.rs  key_scanner.rs  mod.rs
crates/daemon/src/actor/key_writer/: key_writer.rs  mod.rs
crates/daemon/src/actor/passthrough/: filter.rs  init.rs  mod.rs  pass_through.rs  pass_through_state.rs  (+1 more)
crates/daemon/src/adapter/: evdev_input_source.rs  evdev_input_source_mock.rs  event_device_unix.rs  keymap_loader_yaml.rs  mod.rs  qmk_async_hid_device.rs
crates/daemon/src/config/: charon_config.rs  defaults.rs  input_config.rs  mod.rs
crates/daemon/src/devices/: evdev.rs  hid_keyboard.rs  mod.rs
crates/daemon/src/domain/: actor.rs  actor_state.rs  domain_event.rs  event.rs  hid_keycode.rs  hid_report.rs  key_shortcut.rs  keyboard_state.rs  keymap.rs  mod.rs  mode.rs  modifiers.rs  processor.rs  processor_state.rs
crates/daemon/src/port/: async_input_source.rs  hid_device.rs  keymap_loader.rs  mod.rs  qmk_device.rs
crates/daemon/src/processor/: key_event_processor.rs  key_event_to_usb_report.rs  mod.rs  system_shortcut.rs  system_shortcut_processor.rs
crates/daemon/src/util/: evdev.rs  mod.rs  system.rs  test.rs  time.rs
crates/daemon/src/utils/: keyboard.rs
crates/daemon/tests/: key_events_propagation_test.rs  key_scanner_test.rs
(+52 files in other folders)
