[workspace]
members = [
    "charon-daemon",
    "charon-client",
]
resolver = "3"

[workspace.dependencies]
evdev = { version = "0.13.1", features = ["serde", "tokio"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features=["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
eyre = { version = "0.6.12", default-features = false, features = ["auto-install", "track-caller"] }
maiko = { version = "0.2.1", path = "../maiko/maiko", features = ["serde"] }
