[workspace]
members = [
    "charon-daemon",
    "charon-client",
]
resolver = "3"

[workspace.dependencies]
chrono = "0.4.43"
evdev = { version = "0.13.2", features = ["serde", "tokio"] }
eyre = { version = "0.6.12", default-features = false, features = ["auto-install", "track-caller"] }
maiko = { version = "0.2.1", path = "../maiko/maiko", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features=["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
