[workspace]
members = [
    "charon-daemon",
    "charon-client",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
authors = ["ddrcode"]
repository = "https://github.com/ddrcode/charon"
description = "A USB keyboard pass-through device with TUI"

[workspace.dependencies]
chrono = "0.4.43"
evdev = { version = "0.13.2", features = ["serde", "tokio"] }
eyre = { version = "0.6.12", default-features = false, features = ["auto-install", "track-caller"] }
maiko = { version = "0.2.3", features = ["serde"], path="../maiko/maiko" }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-util = "0.7.18"
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
