[package]
name = "charon-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Charon TUI client - keyboard companion interface"

[dependencies]
async-trait = "0.1.89"
charond = { path = "../charon-daemon" }
chrono.workspace = true
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
eyre.workspace = true
maiko.workspace = true
rand = "0.9.1"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
signal-hook = "0.3.18"
strum.workspace = true
tempfile = "3.24.0"
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
tracing-appender = "0.2.4"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util.workspace = true
