[package]
name = "charond"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
testing = ["maiko/test-harness"]

[[test]]
name = "key_events_propagation_test"
required-features = ["testing"]

[[test]]
name = "key_scanner_test"
required-features = ["testing"]

[dependencies]
chrono = "0.4"
strum = { version = "0.27", features = ["derive"] }
evdev.workspace = true
futures = "0.3.31"
serde.workspace = true
serde_json.workspace=true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
maiko.workspace = true
toml = "0.9.1"
uuid.workspace = true
wake-on-lan = "0.2.0"
prometheus = { version = "0.14.0", features = ["push"] }
lru_time_cache = "0.11.11"
deunicode = "1.6.2"
serde_yaml_bw = "2.1.1"
eyre.workspace = true
async-hid = { version = "0.4.4", default-features = false, features = ["tokio"] }
futures-lite = "2.6.1"
tokio-util = "0.7.18"
