[package]
name = "charond"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
testing = ["maiko/test-harness"]

[[test]]
name = "key_events_propagation_test"
required-features = ["testing"]

[[test]]
name = "key_scanner_test"
required-features = ["testing"]

[dependencies]
async-hid = { version = "0.4.4", default-features = false, features = ["tokio"] }
chrono.workspace = true
deunicode = "1.6.2"
eyre.workspace = true
evdev.workspace = true
futures = "0.3.31"
futures-lite = "2.6.1"
lru_time_cache = "0.11.11"
maiko.workspace = true
prometheus = { version = "0.14.0", features = ["push"] }
serde.workspace = true
serde_json.workspace=true
serde_yaml_bw = "2.5.2"
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7.18"
tracing.workspace = true
tracing-subscriber.workspace = true
toml = "0.9.11"
uuid.workspace = true
wake-on-lan = "0.2.0"
