[package]
name = "charond"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Charon daemon - keyboard pass-through service"

[features]
testing = ["maiko/test-harness"]

[dependencies]
async-hid = { version = "0.4.4", default-features = false, features = ["tokio"] }
chrono.workspace = true
deunicode = "1.6.2"
eyre.workspace = true
evdev.workspace = true
futures-lite = "2.6.1"
lru_time_cache = "0.11.11"
maiko.workspace = true
prometheus = { version = "0.14.0", features = ["push"] }
openssl = { version = "0.10", features = ["vendored"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw = "2.5.2"
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "signal"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml = "0.9.11"
wake-on-lan = "0.2.0"

[[test]]
name = "key_events_propagation_test"
required-features = ["testing"]

[[test]]
name = "key_scanner_test"
required-features = ["testing"]
