[package]
name = "charon-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
charon-lib.workspace = true
tempfile = "3.20.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
evdev.workspace = true
uuid.workspace = true
futures = "0.3.31"
serde.workspace = true
rand = "0.9.1"
async-trait = "0.1.88"
tracing-error = "0.2.1"
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
