[package]
name = "charon-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
tokio.workspace = true
charon-lib.workspace = true
tempfile = "3.20.0"
ratatui = "0.29.0"
futures = "0.3.31"
serde.workspace = true
rand = "0.9.1"
async-trait = "0.1.88"
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-recursion = "1.1.1"
reqwest = { version = "0.12.22", features = ["json"] }
chrono = "0.4.41"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
tokio-util = "0.7.15"
signal-hook = "0.3.18"
strum = { version = "0.27.2", features = ["derive"] }
eyre.workspace = true
