[package]
name = "charond"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.88"
evdev.workspace = true
futures = "0.3.31"
serde.workspace = true
serde_json.workspace=true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
charon-lib = { path="../shared" }
toml = "0.9.1"
uuid.workspace = true
wake-on-lan = "0.2.0"
nix = { version = "0.30.1", features = ["term"] }
# prometheus = { version = "0.14.0" }
prometheus = { version = "0.14.0", features = ["push"] }
lru_time_cache = "0.11.11"
